Set working directory

--- a/vsmp.service
+++ b/vsmp.service
@@ -6,6 +6,7 @@ Description=Very Slow Movie Player
 Type=simple
 Restart=always
 RestartSec=120
+WorkingDirectory=/home/pi/vsmp
 ExecStart=python3 /home/pi/vsmp/display.py
 
 [Install]
